# MicroservicesBasedCalculator

./: .gitignore  CMakeLists.txt  generate_protos_C#.bat
Calculator/: CMakeLists.txt
Calculator/source/: Loader.cpp
Client/: CMakeLists.txt  Program.cs
Client/source/: Loader.cpp
Protos/: OperationResponse.proto  SumOperationService.proto  SumRequest.proto  hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h
Server/: CMakeLists.txt  DivisionOperationService.cs  MultiplicationOperationService.cs  Server.cs  Server.csproj  SubtractionOperationService.cs  SumOperationService.cs
Server/include/: Loader.h
Server/source/: Loader.cpp
